2003-08-27  Lars Clausen  <lrclause@cs.uiuc.edu>

	* configure.in: Quote correctly for temporarily adding freetype
	cflags to CPPFLAGS.

	* app/preferences.c (prefs_save): Remove debugging g_print.

2003-08-26  Lars Clausen  <lrclause@cs.uiuc.edu>

	* objects/flowchart/parallelogram.c (pgram_update_data):
	Directions for connections, better system for placing
	connectionpoints. 

2003-08-25  Lars Clausen  <lrclause@cs.uiuc.edu>

	* lib/diagramdata.c (layer_find_closest_object_except): Look all
	the way through the object list, so the foremost object is selected.

	* lib/diagramdata.h: Removing dynamic_obj.h, it should only be
	included for diagramdata.c.

	* lib/prop_text.c (multistringprop_handle_key): Attempt at making
	newline in multistringprop not close the dialog.  Failed so far.

2003-08-25  Steffen Macke <sdteffen@web.de>

	* app/commands.c: using CHM instead of HTML on win32 if available
	* lib/diagramdata.h: including dynamic_obj.h

2003-08-25  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/properties.c (properties_key_event): Make Enter = Ok for
	properties dialogs.  Still some problems with this and Esc for
	Cancel, for instances escaping out of a menu closes the dialog.

	* objects/UML/association.c (association_get_properties): 
	* objects/UML/class_dialog.c (class_create_page): Grab appropriate
	focus. 

	* app/diapsft2renderer.c (draw_string): Use
	dia_font_scaled_build_layout to ensure similarity of text.

	* lib/diagramdata.c: Remove obj from dynobj list when removing
	from layer to avoid nasty race conditions.

	* app/undo.c (group_objects_revert): Make sure to unparent and
	remove from dynobj list when changing layers objects.

2003-08-23  Steffen Macke <sdteffen@web.de>

	* plug-ins/wmf/wmf.cpp (draw_image): replaced BitBlt() with 
	StretchBlt(); fixes #92249
	
2003-08-23  Lars Clausen  <lrclause@cs.uiuc.edu>

	* app/filedlg.c (file_save_as_callback): 
	* app/preferences.h: 
	* app/preferences.c (prefs_data): 
	* lib/diagramdata.h: 